# albion-online-stats

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  Makefile.toml  README.md  albion-online-stats.py  appveyor.yml  environment.yml  installer.cfg  lib.rs  meter.py  nsis_template.nsi  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
application/: albion-online-stats.py  requirements.txt  tox.ini
backend/: Cargo.toml  build.rs  setup.py
backend/aostats/: __init__.py
backend/assets/: decode_macros.rs  item_ids.txt  messages.json
backend/lib/packet-sniffer/: Cargo.toml
backend/lib/packet-sniffer/src/: lib.rs
backend/lib/photon-decode/: .gitignore  Cargo.toml  README.md
backend/lib/photon-decode/src/: decode.rs  error.rs  layout.rs  lib.rs
backend/lib/photon-decode/tests/: decoding_tests.rs  integration_tests.rs
backend/lib/photon-protocol/: Cargo.toml
backend/lib/photon-protocol/src/: decode.rs  lib.rs  types.rs
backend/lib/photon-protocol/tests/: decoding_tests.rs  integration_tests.rs
backend/src/: api.rs  core.rs  game_world.rs  lib.rs  lib_python.rs  lib_python_legacy.rs  publisher.rs  translate.rs
backend/src/crosslang/python/: convert.rs  mod.rs
backend/src/game/: convert.rs  events.rs  id_cache.rs  mod.rs  party.rs  player.rs  unconsumed_messages.rs  world.rs
backend/src/game_events/: convert.rs  events.rs  mod.rs
backend/src/game_messages/: messages.rs
backend/src/game_protocol/: message.rs  mod.rs  packet.rs
backend/src/meter/: mod.rs  player.rs  session.rs  traits.rs  types.rs
backend/src/photon_messages/: itemdb.rs  messages.rs  mod.rs
frontend/: environment.yml  requirements.txt
gui/: albion-stats  engine.py  main.py  meter.py  requirements.txt
launchers/: albion-online-stats.bat  albion-online-stats.sh
scripts/: generate_assets.sh  item_category_map.py  item_id.py  localization.py
src/: __main__.py  backend_proxy.py  core.rs  engine.py  environment.py  event_receiver.py  (+4 more)
(+121 files in other folders)
