[package]
name = "meter"
version = "0.1.0"
authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meter"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.3"

[dependencies]
packet_sniffer = { path = "./lib/packet-sniffer" }
protocol16 = { path = "./lib/protocol16" }
bytes = "0.4"
simplelog = "0.6"
timer = "0.1"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
lazy_static = "1.2"