[package]
name = "libaostats"
version = "0.1.0"
authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libaostats"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.3"

[dependencies]
packet_sniffer = { path = "./lib/packet-sniffer" }
photon_decode = "0.2"
bytes = "0.4"
simplelog = "0.6"
timer = "0.1"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
lazy_static = "1.2"
derive_more = "0.99"
bimap = "0.4.0"

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fake_clock = "0.3.0"